--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">AndrushaDouble</string>
+    <string name="text_is_textview">text is TextView</string>
+    <string name="bottom">Bottom</string>
 </resources>
