--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="view2">view2</string>
     <string name="view3">view3</string>
     <string name="todo">TODO</string>
+    <string name="text_view">text_view</string>
 </resources>
