--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="view_hide1" />
     <string name="add">Add</string>
     <string name="subtract">Subtract</string>
+    <string name="send_back">Send Back</string>
 </resources>
